--- a/src/app/component/shared/signup/signup.component.html
+++ b/src/app/component/shared/signup/signup.component.html
@@ -226,15 +226,15 @@
     </div>
 
     <div class="form-group animation fadeI n" style="text-align:center">
-      <span class="text-muted"><em><span style="color:red;"><strong>*</strong></span> Indicates required field</em>
+      <span class="text-muted"><em><span style="color:red;"><strong>*</strong></span> <a style="color:black;">Indicates required field</a></em>
       </span>
     </div>
 
     <div class="wrapper">
-      <button type="submit" (click)="open(content)" class="btn btn-outline-info my-2 my-sm-0" routerLink="/login" style="text-align: center;"
+      <button type="submit" (click)="open(content)" class="btn btn-outline-info my-2 my-sm-0" routerLink="/login" style="text-align: center;color:#00FFFF"
         [disabled]="!signupForm.valid"><i class="fa fa-user-plus" aria-hidden="true"></i> Sign Up</button>
-      <p class="account">Already have an account with us ? <a routerLink="/login"> <strong>LogIn </strong> </a> here </p>
-      <p>By signing up, you agree to the <strong style="color:orangered;">s3iology.com</strong> Service <a routerLink="/termsCondition"> <strong>Terms & Conditions </strong> </a>        and the <a routerLink="/termsCondition"> <strong>Privacy Policy </strong> </a>.</p>
+      <p class="account">Already have an account with us ? <a class="a1" routerLink="/login"> <strong>LogIn </strong> </a> here </p>
+      <p>By signing up, you agree to the <strong style="color:goldenrod;font-size:22px;">s3iology.com</strong> Service <a class="a2" routerLink="/termsCondition"> <strong>Terms & Conditions </strong> </a>        and the <a class="a3" routerLink="/termsCondition"> <strong>Privacy Policy </strong> </a>.</p>
     </div>
 
 
