some more images

--- a/src/app/component/shared/forget-password/forget-password.component.css
+++ b/src/app/component/shared/forget-password/forget-password.component.css
@@ -45,8 +45,13 @@ div,h1,p{
    
 }
 p{
-    color: maroon;
+    color: #97FF5C  ;
+    font-size: 20px;
 }
 .jumbotron{
-    padding-top:5px;
-}  
+    
+        background-image: url(/assets/images/forget.jpg);
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+        background-size:  cover !important;
+}
