--- a/src/app/component/shared/forget-password/forget-password.component.html
+++ b/src/app/component/shared/forget-password/forget-password.component.html
@@ -20,13 +20,13 @@
   <form [formGroup]="forgetPasswordForm" (ngSubmit)="submitForm(forgetPasswordForm.value)">
     <div class="col-md-6 col-md-offset-4" style="margin:0 auto;">
       <div class="form-group" [ngClass]="{'has-error':!forgetPasswordForm.controls['forgetPassword'].valid && forgetPasswordForm.controls['forgetPassword'].touched}">
-        <label><strong>Username / Email </strong></label>
+        <label style="color:orangered"><strong>Username / Email </strong></label>
         <input class="form-control" type="text" placeholder="Enter Username or Email" [formControl]="forgetPasswordForm.controls['forgetPassword']">
         <div *ngIf="forgetPasswordForm.controls['forgetPassword'].touched || forgetPasswordForm.controls['forgetPassword'].dirty">
           <div *ngIf="forgetPasswordForm.controls['forgetPassword'].hasError('required')" class="fPassword"> Enter Your Username / Email</div>
         </div>
       </div>
-      <button type="submit" (click)="open(content)"  routerLink="/login" class="btn btn-outline-info my-2 my-sm-0" style="text-align: center;" [disabled]="!forgetPasswordForm.valid">Submit</button>
+      <button type="submit" (click)="open(content)"  routerLink="/login" class="btn btn-outline-info my-2 my-sm-0" style="text-align: center;color:#07FF66; " [disabled]="!forgetPasswordForm.valid">Submit</button>
     </div> 
   </form>
   <ng-template #content let-c="close" let-d="dismiss">
